--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon major fa-eye"></span>
+					<span ></span>
 					<h1>Hi, I'm <strong>LetsC</strong>!<br />
 						I help relay information about what's in front of you!</h1>
 					<p>I use Azure's cognitave services to relay or read out what's in front of you (through the camera), all through voice command!</p>
