--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 		<title>LetsC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv="Content-Security-Policy" content="default-src 'self'">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -19,7 +20,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span ></span>
+					<span class="icon major fa-eye"></span>
 					<h1>Hi, I'm <strong>LetsC</strong>!<br />
 						I help relay information about what's in front of you!</h1>
 					<p>I use Azure's cognitave services to relay or read out what's in front of you (through the camera), all through voice command!</p>
