--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 
 		<!-- Scripts -->
-		<script src="speak/node_modules/platform/platform.js"></script>
+		<script src="platform.js"></script>
 		<script src="speak/src/webspeech.js"></script>
 		<!--<script src="MobileServices.Web.min.js"></script>-->
 		<script src="assets/js/jquery.min.js"></script>
